fable/test/syntax_error/save_bad_comma.f
      subroutine sub
      save num,
      end
